# AIShield

./: .gitignore  .gitlab-ci.yml.example  AGENTS.md  ARCHITECTURAL_DECISIONS.md  CHANGELOG.md  CLAUDE.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  WEEK5_TESTING.md  aishield-build-process.md  docker-compose.analytics.yml  install.sh  package-lock.json  package.json  project.md
.github/: PULL_REQUEST_TEMPLATE.md  RULE_TEMPLATE.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  rule-proposal.yml
.github/workflows/: aishield-pr.yml  aishield.yml  analytics-smoke.yml  docs.yml  release.yml
crates/aishield-analytics/: .env.example  Cargo.toml  README.md
crates/aishield-analytics/migrations/: 20260208_add_ai_metrics.sql
crates/aishield-analytics/src/: auth.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs
crates/aishield-cli/: Cargo.toml  README.md
crates/aishield-cli/src/: analytics_client.rs  config.rs  git_utils.rs  main.rs
crates/aishield-core/: Cargo.toml
crates/aishield-core/src/: classifier.rs  detector.rs  lib.rs  rules.rs  scanner.rs  scoring.rs
crates/aishield-core/src/classifier/: mod.rs  onnx.rs
dashboard/: E2E_TEST_REPORT.md  FILTER_TESTING.md  QUICKSTART.md  README.md  TESTING.md  server.js
dashboard/lib/: history.js  history.test.js  ingest.js  ingest.test.js
dashboard/public/: api-client.js  app.js  index.html  settings.js  styles.css
dashboard/scripts/: ingest-report.js  sample-history.js
demos/: README.md  run.sh
demos/output/: bench.txt  fix-dry-run.txt  scan-github.txt  scan-table.txt  scan.json  scan.sarif  stats.txt
docs/: DATABASE_SETUP.md  README.md  ai-classifier.md  analytics-staging.md  architecture.md  ci-github-actions.md  cli.md  configuration.md  contributing.md  dashboard.md  getting-started.md  index.md  integrations.md  output-formats.md  releasing.md  roadmap.md  rules-authoring.md  vscode-extension.md
docs/.vitepress/: config.ts
docs/guides/: devsecops.md  testing-guide.md  writing-your-first-rule.md  your-first-contribution.md
integrations/github-action/: action.yml  post-review.sh
integrations/vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
migrations/: 001_create_scans_table.sql  002_create_findings_table.sql  003_create_analytics_views.sql  README.md  seed-test-data.sql  test-migrations.sh
models/ai-classifier/: README.md  calibration-notes.md  model-manifest.json  model.onnx  onnx_runner.py
rules/secrets/: AISHIELD-SEC-SECRETS-001.yaml  AISHIELD-SEC-SECRETS-002.yaml  (+13 more)
scripts/: deploy-analytics-staging.sh  e2e-test.sh  observe-analytics-signal.sh  rollback-analytics-staging.sh  seed-ai-data.sh  smoke-analytics-api.sh  start-analytics-stack.sh  start-dashboard.sh  stop-analytics-stack.sh  train-classifier.py
(+279 files in other folders)
