[package]
name = "aishield-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aishield-core = { path = "../aishield-core" }
serde_json = "1.0"
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
