[package]
name = "aishield-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
onnx = ["dep:ort", "dep:ndarray"]

[dependencies]
ort = { version = "2.0.0-rc.2", features = ["ndarray"], optional = true }
ndarray = { version = "0.17", optional = true }
